--- a/src/styles.css
+++ b/src/styles.css
@@ -23,28 +23,39 @@ html, body {
   justify-content: center;
 }
 
-.group-partial-load {
-  flex: 1;
-  margin-left: 8px;
+.partial-load .slider-group {
   display: flex;
+  align-items: center;
+  gap: 4px;
 }
 
-.range-partial-load {
+.partial-load .slider {
   flex: 1;
   margin: 0;
 }
 
-.label-partial-load {
+.partial-load .percentage {
   flex: none;
   display: inline-block;
   width: 72px;
-  height: 21px;
+  height: 1.25rem;
+  line-height: 1.25rem;
   text-align: right;
+  font-variant-numeric: tabular-nums;
+}
+
+.partial-load .bytes {
+  height: 1rem;
+  line-height: 1rem;
+  margin-top: 4px;
+  text-align: right;
+  font-size: 0.8rem;
   font-variant-numeric: tabular-nums;
 }
 
 .image-container {
   flex: 1;
+  position: relative;
   min-height: 0;
   overflow: auto;
 }
@@ -57,6 +68,20 @@ html, body {
   width: 100%;
   height: 100%;
   object-fit: scale-down;
+}
+
+.image-container > .error {
+  display: none;
+  position: absolute;
+  inset: 0;
+  padding: 8px;
+  background-color: rgb(0 0 0 / 0.5);
+  text-align: center;
+  color: white;
+}
+
+.image-container > .error.show {
+  display: block;
 }
 
 .image.loading {
